--- a/tracking-rules/javascript/Aubrey's_Event_1.yaml
+++ b/tracking-rules/javascript/Aubrey's_Event_1.yaml
@@ -1,27 +1,27 @@
-rule:
-  key: Aubrey's Event 1
-  type: TRACK
-  version: 1
-  jsonSchema:
-    $schema: http://json-schema.org/draft-07/schema#
-    type: object
-    labels:
-      feature: journeys
-    properties:
-      context:
-        type: object
-      traits:
-        type: object
+rules:
+  - key: Aubrey's Event 1
+    type: TRACK
+    version: 1
+    jsonSchema:
+      $schema: http://json-schema.org/draft-07/schema#
+      type: object
+      labels:
+        feature: journeys
       properties:
-        type: object
+        context:
+          type: object
+        traits:
+          type: object
         properties:
-          prop2:
-            description: this is a single property
-            type: string
-        required:
-          - prop2
-    required:
-      - properties
-  createdAt: '2024-09-18T18:36:43.000Z'
-  updatedAt: '2024-09-18T18:36:43.000Z'
-  deprecatedAt: '0001-01-01T00:00:00.000Z'
+          type: object
+          properties:
+            prop2:
+              description: this is a single property
+              type: string
+          required:
+            - prop2
+      required:
+        - properties
+    createdAt: '2024-09-18T18:36:43.000Z'
+    updatedAt: '2024-09-18T18:36:43.000Z'
+    deprecatedAt: '0001-01-01T00:00:00.000Z'
