--- a/tracking-rules/javascript/Second_Event.yaml
+++ b/tracking-rules/javascript/Second_Event.yaml
@@ -1,50 +1,50 @@
-rule:
-  key: Second Event
-  type: TRACK
-  version: 1
-  jsonSchema:
-    $schema: http://json-schema.org/draft-07/schema#
-    type: object
-    labels:
-      feature: journeys
-    properties:
-      context:
-        type: object
-      traits:
-        type: object
+rules:
+  - key: Second Event
+    type: TRACK
+    version: 1
+    jsonSchema:
+      $schema: http://json-schema.org/draft-07/schema#
+      type: object
+      labels:
+        feature: journeys
       properties:
-        type: object
+        context:
+          type: object
+        traits:
+          type: object
         properties:
-          array_prop1:
-            description: >-
-              this is an array property (it will specify  "items", keys that
-              need to exist for each item in the array)
-            items:
+          type: object
+          properties:
+            array_prop1:
+              description: >-
+                this is an array property (it will specify  "items", keys that
+                need to exist for each item in the array)
+              items:
+                properties:
+                  layer1_prop2:
+                    description: >-
+                      this is an o ptional property on any items in the
+                      array_prop1 array safd
+                    type: string
+                type: object
+              type: array
+            obj_prop1:
+              description: tfhis is required obj ect (i.e. c an have nested sub-properties)
               properties:
-                layer1_prop2:
-                  description: >-
-                    this is an o ptional property on any items in the
-                    array_prop1 array safd
+                sub_prop1:
+                  description: this is a req uired sub-property in an object
                   type: string
+              required:
+                - sub_prop1
               type: object
-            type: array
-          obj_prop1:
-            description: tfhis is required obj ect (i.e. c an have nested sub-properties)
-            properties:
-              sub_prop1:
-                description: this is a req uired sub-property in an object
-                type: string
-            required:
-              - sub_prop1
-            type: object
-          prop3:
-            description: this is a single property
-            type: string
-        required:
-          - obj_prop1
-          - prop3
-    required:
-      - properties
-  createdAt: '2024-08-14T22:31:13.000Z'
-  updatedAt: '2024-08-15T23:46:34.000Z'
-  deprecatedAt: '0001-01-01T00:00:00.000Z'
+            prop3:
+              description: this is a single property
+              type: string
+          required:
+            - obj_prop1
+            - prop3
+      required:
+        - properties
+    createdAt: '2024-08-14T22:31:13.000Z'
+    updatedAt: '2024-08-15T23:46:34.000Z'
+    deprecatedAt: '0001-01-01T00:00:00.000Z'
