--- a/tracking-rules/javascript/new-rule.yml
+++ b/tracking-rules/javascript/new-rule.yml
@@ -10,3 +10,7 @@ rules:
         description: this is a single property
         type: string
         required: true
+      prop3:
+        description: this is a single property
+        type: string
+        required: true
