--- a/tracking-rules/javascript/First_Event.yml
+++ b/tracking-rules/javascript/First_Event.yml
@@ -1,52 +1,35 @@
 rules:
   - key: First Event
     type: TRACK
+    description: First Event
     version: 1
-    jsonSchema:
-      $schema: http://json-schema.org/draft-07/schema#
-      type: object
-      labels:
-        feature: journeys
-      properties:
-        context:
-          type: object
-        traits:
-          type: object
-        properties:
-          type: object
+    labels:
+      feature: journeys
+    properties:
+      array_prop2:
+        description: >-
+          this is an array property (it will specify  "items", keys that need to
+          exist for each item in the array)
+        items:
           properties:
-            array_prop2:
+            layer1_prop34:
               description: >-
-                this is an array property (it will specify  "items", keys that
-                need to exist for each item in the array)
-              items:
-                properties:
-                  layer1_prop34:
-                    description: >-
-                      this is an optional property on any items in the
-                      array_prop1  change here
-                    type: string
-                type: object
-              type: array
-            obj_prop1:
-              description: >-
-                this is required object (i.e. can have nested sub-properties)
-                here here
-              properties:
-                sub_prop1:
-                  description: here blach
-                  type: array
-              required:
-                - sub_prop1
-              type: object
-            prop3:
-              description: this is a single test testing
+                this is an optional property on any items in the array_prop1 
+                change here
               type: string
-          required:
-            - obj_prop1
-            - prop3
-      required:
-        - properties
-    createdAt: '2024-08-08T18:10:05.000Z'
-    updatedAt: '2025-02-11T20:48:22.000Z'
-    deprecatedAt: '0001-01-01T00:00:00.000Z'
+          type: object
+        type: array
+      obj_prop1:
+        description: >-
+          this is required object (i.e. can have nested sub-properties) here
+          here
+        properties:
+          sub_prop1:
+            description: here blach
+            type: array
+        required: true
+        type: object
+      prop3:
+        description: this is a single test testing
+        type: string
+        required: true
