--- a/tracking-rules/javascript/Obj_Prop_6.yml
+++ b/tracking-rules/javascript/Obj_Prop_6.yml
@@ -1,40 +1,26 @@
 rules:
-  - key: Obj Prop 644
+  - key: Obj Prop 6
     type: TRACK
+    description: Obj Prop 6
     version: 1
-    jsonSchema:
-      $schema: http://json-schema.org/draft-07/schema#
-      type: object
-      labels:
-        feature: journeys
-      properties:
-        context:
-          type: object
-        traits:
-          type: object
+    labels:
+      feature: journeys
+    properties:
+      object:
+        description: this is a single property
         properties:
-          type: object
-          properties:
-            object:
-              description: this is a single property
-              properties:
-                int1:
-                  description: this should be a new property
-                  type: number
-                string:
-                  description: this is a required property in an object new descriotion
-                  type: string
-              required:
-                - string
-              type: object
-            object2:
-              description: this is a single property
-              properties:
-                string:
-                  description: this is a required sub-property in an object dsfa
-                  type: string
-              type: object
-          required:
-            - object
-      required:
-        - properties
+          int1:
+            description: this should be a new property
+            type: number
+          string:
+            description: this is a required property in an object new descriotion
+            type: string
+        required: true
+        type: object
+      object2:
+        description: this is a single property
+        properties:
+          string:
+            description: this is a required sub-property in an object dsfa
+            type: string
+        type: object
