--- a/tracking-rules/javascript/Third_Event.yml
+++ b/tracking-rules/javascript/Third_Event.yml
@@ -1,27 +1,12 @@
 rules:
   - key: Third Event
     type: TRACK
+    description: Third Event
     version: 1
-    jsonSchema:
-      $schema: http://json-schema.org/draft-07/schema#
-      type: object
-      labels:
-        feature: journeys
-      properties:
-        context:
-          type: object
-        traits:
-          type: object
-        properties:
-          type: object
-          properties:
-            prop2:
-              description: this is a single property
-              type: string
-          required:
-            - prop2
-      required:
-        - properties
-    createdAt: '2024-08-15T18:56:35.000Z'
-    updatedAt: '2024-08-15T23:46:34.000Z'
-    deprecatedAt: '0001-01-01T00:00:00.000Z'
+    labels:
+      feature: journeys
+    properties:
+      prop2:
+        description: this is a single property
+        type: string
+        required: true
