--- a/tracking-rules/javascript/Obj_Prop_20.yml
+++ b/tracking-rules/javascript/Obj_Prop_20.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Obj Prop 20
     type: TRACK
-    description: Obj Prop 20
+    description: Obj Prop 20 description
     version: 1
     labels:
       feature: journeys
