--- a/tracking-rules/javascript/First_Event.yml
+++ b/tracking-rules/javascript/First_Event.yml
@@ -1,7 +1,7 @@
 rules:
   - key: First Event
     type: TRACK
-    description: First Event desc
+    description: First Event desc hi
     version: 1
     labels:
       feature: journeys
