--- a/tracking-rules/javascript/Second_Event.yml
+++ b/tracking-rules/javascript/Second_Event.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Second Event
     type: TRACK
-    description: Second Event
+    description: Second Event hi
     version: 1
     labels:
       feature: journeys
