--- a/tracking-rules/javascript/Third_Event.yml
+++ b/tracking-rules/javascript/Third_Event.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Third Event
     type: TRACK
-    description: Third Event
+    description: Third Event hi
     version: 1
     labels:
       feature: journeys
