--- a/tracking-rules/javascript/Obj_Prop.yml
+++ b/tracking-rules/javascript/Obj_Prop.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Obj Prop
     type: TRACK
-    description: Obj Prop
+    description: Obj Prop hi
     version: 1
     labels: {}
     properties:
