--- a/tracking-rules/javascript/Obj_Prop_22.yml
+++ b/tracking-rules/javascript/Obj_Prop_22.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Obj Prop 22
     type: TRACK
-    description: Obj Prop 22 sdf
+    description: Obj Prop 22 sdf hi
     version: 1
     labels:
       feature: journeys
