--- a/tracking-rules/javascript/Obj_Prop_6.yml
+++ b/tracking-rules/javascript/Obj_Prop_6.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Obj Prop 6
     type: TRACK
-    description: Obj Prop 6 description
+    description: Obj Prop 6 description hi
     version: 1
     labels:
       feature: journeys
