--- a/tracking-rules/server/First_Event.yml
+++ b/tracking-rules/server/First_Event.yml
@@ -1,7 +1,7 @@
 rules:
   - key: First Event
     type: TRACK
-    description: First Event
+    description: First Event hi
     version: 1
     labels:
       feature: journeys
