--- a/.github/workflows/update-prod-tracking-plans.yml
+++ b/.github/workflows/update-prod-tracking-plans.yml
@@ -1,3 +1,90 @@
+# name: Update Production Tracking Plans and Generate Markdown
+
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'tracking-rules/javascript/**.yml'
+#       - 'tracking-rules/server/**.yml'
+
+# jobs:
+#   update-and-generate-markdown:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v3
+#       with:
+#         fetch-depth: 10  # Increase fetch depth to ensure we have recent history  
+
+#     - name: Set up Node.js
+#       uses: actions/setup-node@v3
+#       with:
+#         node-version: '14'
+
+#     - name: Install dependencies
+#       run: npm install
+
+#     - name: Pull latest changes
+#       run: git pull origin main
+
+#     # Update JavaScript Tracking Plan
+#     - name: Run update script for JavaScript
+#       run: |
+#         echo "Checking for changes in JavaScript tracking plan"
+#         git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/javascript" && \
+#         SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
+#         SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT }} \
+#         PLAN_DIR=tracking-rules/javascript \
+#         node scripts/update-tracking-plan.js || echo "No changes detected for JavaScript"
+
+#     - name: Run save script for JavaScript
+#       run: |
+#         git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/javascript" && \
+#         SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
+#         SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT }} \
+#         PLAN_DIR=plans/prod/javascript \
+#         node scripts/save-tracking-plan.js || echo "No changes detected for JavaScript"
+
+
+#     - name: Generate markdown for JavaScript
+#       run: |
+#           git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/javascript" && \
+#           node scripts/render-tp.js "JavaScript Tracking Plan" "plans/prod/javascript/current-rules.json" "docs/javascript_tracking_plan.md" || echo "No changes detected for JavaScript markdown"
+
+#     # Update Server Tracking Plan
+#     - name: Run update script for Server
+#       run: |
+#         echo "Checking for changes in server tracking plan"
+#         git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/server" && \
+#         SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
+#         SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_SERVER }} \
+#         PLAN_DIR=tracking-rules/server \
+#         node scripts/update-tracking-plan.js || echo "No changes detected for server"
+
+#     - name: Run save script for Server
+#       run: |
+#         git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/server" && \
+#         SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
+#         SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_SERVER }} \
+#         PLAN_DIR=plans/prod/server \
+#         node scripts/save-tracking-plan.js || echo "No changes detected for server"
+    
+#     - name: Generate markdown for Server
+#       run: |
+#         git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/server" && \
+#         node scripts/render-tp.js "Server Tracking Plan" "plans/prod/server/current-rules.json" "docs/server_tracking_plan.md" || echo "No changes detected for Server markdown"
+
+
+#     - name: Commit and push changes
+#       run: |
+#         git config --global user.name "github-actions[bot]"
+#         git config --global user.email "github-actions[bot]@users.noreply.github.com"
+#         git add plans/prod/javascript/current-rules.json plans/prod/server/current-rules.json docs/javascript_tracking_plan.md docs/server_tracking_plan.md
+#         git commit -m "Generate markdown for updated tracking plan rules [skip ci]" || echo "No changes to commit"
+#         git push origin main
+
 name: Update Production Tracking Plans and Generate Markdown
 
 on:
@@ -11,76 +98,53 @@ on:
 jobs:
   update-and-generate-markdown:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        tracking_plan:
+          - { name: "JavaScript", path: "javascript", secret: "PROD_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT" }
+          - { name: "Server", path: "server", secret: "PROD_SEGMENT_TRACKING_PLAN_ID_SERVER" }
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 10  # Increase fetch depth to ensure we have recent history  
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 10  # Ensure enough history for detecting changes
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Pull latest changes
-      run: git pull origin main
+      - name: Pull latest changes
+        run: git pull origin main
 
-    # Update JavaScript Tracking Plan
-    - name: Run update script for JavaScript
-      run: |
-        echo "Checking for changes in JavaScript tracking plan"
-        git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/javascript" && \
-        SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
-        SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT }} \
-        PLAN_DIR=tracking-rules/javascript \
-        node scripts/update-tracking-plan.js || echo "No changes detected for JavaScript"
+      - name: Update Tracking Plan
+        if: contains(github.event.head_commit.modified, format('tracking-rules/{0}', matrix.tracking_plan.path))
+        env:
+          SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+          SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+          PLAN_DIR: tracking-rules/${{ matrix.tracking_plan.path }}
+        run: node scripts/update-tracking-plan.js
 
-    - name: Run save script for JavaScript
-      run: |
-        git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/javascript" && \
-        SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
-        SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT }} \
-        PLAN_DIR=plans/prod/javascript \
-        node scripts/save-tracking-plan.js || echo "No changes detected for JavaScript"
+      - name: Save Tracking Plan
+        if: contains(github.event.head_commit.modified, format('tracking-rules/{0}', matrix.tracking_plan.path))
+        env:
+          SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+          SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+          PLAN_DIR: plans/prod/${{ matrix.tracking_plan.path }}
+        run: node scripts/save-tracking-plan.js
 
+      - name: Generate Markdown
+        if: contains(github.event.head_commit.modified, format('tracking-rules/{0}', matrix.tracking_plan.path))
+        run: node scripts/render-tp.js "${{ matrix.tracking_plan.name }} Tracking Plan" "plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json" "docs/${{ matrix.tracking_plan.path }}_tracking_plan.md"
 
-    - name: Generate markdown for JavaScript
-      run: |
-          git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/javascript" && \
-          node scripts/render-tp.js "JavaScript Tracking Plan" "plans/prod/javascript/current-rules.json" "docs/javascript_tracking_plan.md" || echo "No changes detected for JavaScript markdown"
-
-    # Update Server Tracking Plan
-    - name: Run update script for Server
-      run: |
-        echo "Checking for changes in server tracking plan"
-        git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/server" && \
-        SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
-        SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_SERVER }} \
-        PLAN_DIR=tracking-rules/server \
-        node scripts/update-tracking-plan.js || echo "No changes detected for server"
-
-    - name: Run save script for Server
-      run: |
-        git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/server" && \
-        SEGMENT_API_KEY=${{ secrets.SEGMENT_PUBLIC_API_TOKEN }} \
-        SEGMENT_TRACKING_PLAN_ID=${{ secrets.PROD_SEGMENT_TRACKING_PLAN_ID_SERVER }} \
-        PLAN_DIR=plans/prod/server \
-        node scripts/save-tracking-plan.js || echo "No changes detected for server"
-    
-    - name: Generate markdown for Server
-      run: |
-        git diff --name-only HEAD^ HEAD | grep -q "tracking-rules/server" && \
-        node scripts/render-tp.js "Server Tracking Plan" "plans/prod/server/current-rules.json" "docs/server_tracking_plan.md" || echo "No changes detected for Server markdown"
-
-
-    - name: Commit and push changes
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add plans/prod/javascript/current-rules.json plans/prod/server/current-rules.json docs/javascript_tracking_plan.md docs/server_tracking_plan.md
-        git commit -m "Generate markdown for updated tracking plan rules [skip ci]" || echo "No changes to commit"
-        git push origin main
+      - name: Commit and Push Updates
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json docs/${{ matrix.tracking_plan.path }}_tracking_plan.md
+          git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules and generated markdown [skip ci]" || echo "No changes to commit"
+          git push origin main
