--- a/tracking-rules/javascript/Aubrey's_Event_1.yml
+++ b/tracking-rules/javascript/Aubrey's_Event_1.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Aubrey's Event 1
     type: TRACK
-    description: Aubrey's Event 1 hi hi
+    description: Aubrey's Event 1 hi
     version: 1
     labels:
       feature: journeys
