--- a/.github/workflows/update-prod-tracking-plans.yml
+++ b/.github/workflows/update-prod-tracking-plans.yml
@@ -150,4 +150,10 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json docs/${{ matrix.tracking_plan.path }}_tracking_plan.md
           git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules and generated markdown [skip ci]" || echo "No changes to commit"
+          
+          # Fetch latest changes & merge automatically
+          git pull --rebase origin main || git pull --autostash origin main
+          
+          # Push changes
           git push origin main
+        
