--- a/tracking-rules/server/Obj_Prop_2.yml
+++ b/tracking-rules/server/Obj_Prop_2.yml
@@ -12,7 +12,7 @@ rules:
           int:
             description: this is an optional sub-property in an object hey hey
             type: number
-          string:
+          strings:
             description: this is a required sub-property in an object here
             type: string
         required: true
