--- a/.github/workflows/update-dev-tracking-plans.yml
+++ b/.github/workflows/update-dev-tracking-plans.yml
@@ -1,3 +1,70 @@
+# name: Update Development Tracking Plans
+
+# on:
+#   push:
+#     branches-ignore:
+#       - main
+#     paths:
+#       - 'tracking-rules/javascript/**.yml'
+#       - 'tracking-rules/server/**.yml'
+
+# jobs:
+#   update-and-save-tracking-plans:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         tracking_plan:
+#           - { name: "JavaScript", path: "javascript", secret: "DEV_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT" }
+#           - { name: "Server", path: "server", secret: "DEV_SEGMENT_TRACKING_PLAN_ID_SERVER" }
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 10  # Ensure enough history for detecting changes
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '16'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Pull latest changes
+#         run: git pull origin ${{ github.ref }}
+
+#       - name: Update Tracking Plan
+#         env:
+#           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+#           SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+#           PLAN_DIR: tracking-rules/${{ matrix.tracking_plan.path }}
+#         run: |
+#           echo "Updating tracking plan for ${{ matrix.tracking_plan.name }}"
+#           node scripts/update-tracking-plan.js || echo "No changes detected"
+
+#       - name: Save Tracking Plan
+#         env:
+#           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+#           SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+#           PLAN_DIR: plans/dev/${{ matrix.tracking_plan.path }}
+#         run: |
+#           echo "Saving tracking plan for ${{ matrix.tracking_plan.name }}"
+#           node scripts/save-tracking-plan.js || echo "No changes detected"
+
+#       - name: Commit and Push Updates
+#         run: |
+#           git config --global user.name "github-actions[bot]"
+#           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+#           git add plans/dev/${{ matrix.tracking_plan.path }}/current-rules.json
+#           git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules [skip ci]" || echo "No changes to commit"
+          
+#           # Fetch latest changes & merge automatically
+#           git pull --rebase origin ${{ github.ref }} || git pull --autostash origin ${{ github.ref }}
+          
+#           # Push changes
+#           git push origin ${{ github.ref }}
+
 name: Update Development Tracking Plans
 
 on:
@@ -9,13 +76,27 @@ on:
       - 'tracking-rules/server/**.yml'
 
 jobs:
+  initialize-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.parse_json.outputs.matrix }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Load Tracking Plans Configuration
+        id: parse_json
+        run: |
+          MATRIX=$(jq -c '[.plans[] | {name, path, secret: .dev_secret}]' config/tracking-plans-config.json)
+          echo "::set-output name=matrix::$MATRIX"
+
   update-and-save-tracking-plans:
+    needs: initialize-matrix
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tracking_plan:
-          - { name: "JavaScript", path: "javascript", secret: "DEV_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT" }
-          - { name: "Server", path: "server", secret: "DEV_SEGMENT_TRACKING_PLAN_ID_SERVER" }
+        tracking_plan: ${{ fromJson(needs.initialize-matrix.outputs.matrix) }}
 
     steps:
       - name: Checkout repository
