--- a/tracking-rules/server/Obj_Prop_2.yml
+++ b/tracking-rules/server/Obj_Prop_2.yml
@@ -7,7 +7,7 @@ rules:
       feature: journeys
     properties:
       object:
-        description: this is a single object
+        description: this is a single object property
         properties:
           int:
             description: this is an optional sub-property in an object hey hey
