--- a/.github/workflows/update-prod-tracking-plans.yml
+++ b/.github/workflows/update-prod-tracking-plans.yml
@@ -150,7 +150,7 @@ jobs:
           WEBFLOW_COLLECTION_ID: ${{ secrets.WEBFLOW_COLLECTION_ID }}
           WEBFLOW_SITE_ID: ${{ secrets.WEBFLOW_SITE_ID }}
         run: |
-          node scripts/push-to-webflow.js "${{ matrix.tracking_plan.name }}"
+          node scripts/push-to-webflow.js "${{ matrix.tracking_plan.path }}"
   
       - name: Commit and Push Updates
         run: |
