--- a/tracking-rules/javascript/Obj_Prop_2.yml
+++ b/tracking-rules/javascript/Obj_Prop_2.yml
@@ -1,7 +1,7 @@
 rules:
   - key: Obj Prop 2
     type: TRACK
-    description: Obj Prop 2
+    description: Obj Prop 2 description
     version: 1
     labels:
       feature: journeys
