--- a/.github/workflows/update-prod-tracking-plans.yml
+++ b/.github/workflows/update-prod-tracking-plans.yml
@@ -194,6 +194,7 @@ jobs:
       - name: Process Tracking Plans Sequentially
         env:
           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+          SECRETS_JSON: ${{ toJson(secrets) }}  # Convert secrets to JSON so we can look them up dynamically
         run: |
           MATRIX='${{ steps.parse_json.outputs.matrix }}'
           echo "Processing tracking plans..."
@@ -205,7 +206,10 @@ jobs:
 
             echo "📌 Updating tracking plan: $NAME"
 
-            export SEGMENT_TRACKING_PLAN_ID="${{ secrets[$SECRET_KEY] }}"
+            # Retrieve the secret value dynamically
+            SEGMENT_TRACKING_PLAN_ID=$(echo "$SECRETS_JSON" | jq -r --arg key "$SECRET_KEY" '.[$key]')
+
+            export SEGMENT_TRACKING_PLAN_ID
             export PLAN_DIR="tracking-rules/$PATH"
 
             # Run update scripts
